// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-type-blueprint should get blueprints for a document type 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"name":"_Test Blueprint For DocumentType","id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-type-blueprint should handle document type with no blueprints 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-type-blueprint should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error using get-document-type-blueprint:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The specified document type was not found",
    "status": 404,
    "operationStatus": "ContentTypeNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;
